# stellAIverse-contracts

./: Cargo.toml  restoration_issues.md
contracts/credit-scoring-waitlist/src/: lib.rs
contracts/governance/src/: lib.rs
contracts/marketplace/src/: lib.rs
contracts/multisig-waitlist/src/: lib.rs
contracts/staking-bonuses/src/: errors.rs  lib.rs
lib/src/: storage_keys.rs  types.rs
scripts/: build-optimized-wasm.sh
